--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -12,7 +12,8 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
     steps:
       - uses: actions/checkout@v2
       - run: npm install
